Prettify class names (Question -> QuestionTemplate) + QLCVirtualMachine skeleton-ish

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -44,12 +44,13 @@ WhatArraySize = Which is the length of the first array allocated when calling %s
 CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
 WhichReturnType = What is the return type of the function %s?
 HowManyLoopsMakeSense = How many loops might you need to implement the function %s with the following signature?
-WhichVariablesInScope = The variable %s is undefined on line %s. Which variables can you use at that point in the code?
+WhichVariablesInScope = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
+
+# Code Smell Questions
 UselessDuplicationIfElse = "Do the following methods have the same behavior?"
 RemoveEmptyIfAndElse = "Do the following methods have the same behavior?"
 UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?"
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
-
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
@@ -57,6 +58,12 @@ MethodWithWrongReturnStmt = The return statement %s is invalid for the function 
 CallMethodWithWrongParameterNumber = The function call %s (line %s) does not use the correct number of arguments. How many parameters does the function %s have?
 CallMethodWithWrongParameterTypes = The function call %s (line %s) does not use the correct types of arguments. Which are the parameter types of function %s?
 AssignVarWithMethodWrongType = The value %s cannot be assigned to the variable %s. What is the return type of the function %s?
+
+# Runtime Error Questions
+ArrayIndexOutOfBounds = The function call %s threw an ArrayIndexOutOfBounds exception at line %s: the index %s is invalid for the array %s.
+WhichLengthOfArray = Which is the length of the array %s?
+WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
+
 
 # Custom Dynamic Question Types
 HowManyArrayReads = How many array position reads are performed when calling %s?
