--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -31,7 +31,6 @@ WhichFixedVariables = Quais são as variáveis de valor fixo da função %s?
 WhichVariableRole = Qual o papel da variável %s na função %s?
 HowManyLoops = Quantos ciclos tem a função %s?
 
-
 # JASK Dynamic Question Types
 HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação %s?
 HowManyFunctionCalls = Quantas invocações a %s são feitas ao invocar %s?
@@ -46,6 +45,8 @@ CanCallAMethodWithGivenArguments = A função %s pode ser chamada com os argumento
 WhichReturnType = Qual o tipo de retorno da função %s?
 HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a função %s com a seguinte assinatura?
 WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
+
+# Code Smell Questions
 UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
 RemoveEmptyIfAndElse = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
@@ -57,6 +58,11 @@ MethodWithWrongReturnStmt = A instrução de retorno %s é inválida para a função %
 CallMethodWithWrongParameterNumber = A invocação %s (linha %s) não usa o número correto de argumentos. Quantos parâmetros tem a função %s?
 CallMethodWithWrongParameterTypes = A invocação %s (linha %s) não usa o(s) tipo(s) correto(s) de argumentos. Quais são os tipos dos parâmetros da função %s?
 AssignVarWithMethodWrongType = O valor %s não pode ser atribuído à variável %s. Qual o tipo de retorno da função %s?
+
+# Runtime Error Questions
+ArrayIndexOutOfBounds = A invocação %s lançou uma exceção ArrayIndexOutOfBounds na linha %s: o índice %s é inválido para o vetor %s.
+WhichLengthOfArray = Qual é o comprimento do vetor %s?
+WhichVariableUsedToIndexArray = Que variável é usada para indexar o vetor %s?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
