ArrayIndexOutOfBounds question (needs better distractors)

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -61,8 +61,9 @@ AssignVarWithMethodWrongType = The value %s cannot be assigned to the variable %
 
 # Runtime Error Questions
 ArrayIndexOutOfBounds = The function call %s threw an ArrayIndexOutOfBounds exception at line %s: the index %s is invalid for the array %s.
-WhichLengthOfArray = Which is the length of the array %s?
-WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
+    WhichLengthOfArray = Which is the length of the array %s?
+    WhichLastValidArrayIndex = Which is the last valid index of the array %s?
+    WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
 
 
 # Custom Dynamic Question Types
