--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -61,8 +61,9 @@ AssignVarWithMethodWrongType = O valor %s não pode ser atribuído à variável %s. 
 
 # Runtime Error Questions
 ArrayIndexOutOfBounds = A invocação %s lançou uma exceção ArrayIndexOutOfBounds na linha %s: o índice %s é inválido para o vetor %s.
-WhichLengthOfArray = Qual é o comprimento do vetor %s?
-WhichVariableUsedToIndexArray = Que variável é usada para indexar o vetor %s?
+    WhichLengthOfArray = Qual é o comprimento do vetor %s?
+    WhichLastValidArrayIndex = Qual é o último índice válido do vetor %s?
+    WhichVariableUsedToIndexArray = Que variável é usada para indexar o vetor %s?
 
 # Custom Dynamic Question Types
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
