--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -51,6 +51,8 @@ UselessDuplicationIfElse = "Do the following methods have the same behavior?"
 RemoveEmptyIfAndElse = "Do the following methods have the same behavior?"
 UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?"
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
+ReplaceForWithWhile = "Do the following methods have the same behavior?"
+ReplaceWhileWithFor = "Do the following methods have the same behavior?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
