--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -51,6 +51,8 @@ UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
 RemoveEmptyIfAndElse = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
+ReplaceForWithWhile = "Os seguintes métodos têm o mesmo comportamento?"
+ReplaceWhileWithFor = "Os seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
