--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -53,6 +53,7 @@ UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
 ReplaceForWithWhile = "Do the following methods have the same behavior?"
 ReplaceWhileWithFor = "Do the following methods have the same behavior?"
+UnnecessaryIfNesting = "Do the following methods have the same behavior?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
@@ -63,9 +64,9 @@ AssignVarWithMethodWrongType = The value %s cannot be assigned to the variable %
 
 # Runtime Error Questions
 ArrayIndexOutOfBounds = The function call %s threw an ArrayIndexOutOfBounds exception at line %s: the index %s is invalid for the array %s.
-    WhichLengthOfArray = Which is the length of the array %s?
-    WhichLastValidArrayIndex = Which is the last valid index of the array %s?
-    WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
+WhichLengthOfArray = Which is the length of the array %s?
+WhichLastValidArrayIndex = Which is the last valid index of the array %s?
+WhichVariableUsedToIndexArray = Which variable is being used to access the array %s?
 
 
 # Custom Dynamic Question Types
