--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -54,6 +54,7 @@ UselessVariableDeclaration = "Do the following methods have the same behavior?"
 ReplaceForWithWhile = "Do the following methods have the same behavior?"
 ReplaceWhileWithFor = "Do the following methods have the same behavior?"
 UnnecessaryIfNesting = "Do the following methods have the same behavior?"
+IFReturnCondition = "Which of the following methods has/have the same behavior?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
