--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -54,6 +54,7 @@ UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceForWithWhile = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceWhileWithFor = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryIfNesting = "Os seguintes métodos têm o mesmo comportamento?"
+IFReturnCondition = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
