--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -55,6 +55,7 @@ ReplaceForWithWhile = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceWhileWithFor = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryIfNesting = "Os seguintes métodos têm o mesmo comportamento?"
 IFReturnCondition = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
+ReplacesIFsWithIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
