--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -56,6 +56,7 @@ ReplaceWhileWithFor = "Os seguintes métodos têm o mesmo comportamento?"
 UnnecessaryIfNesting = "Os seguintes métodos têm o mesmo comportamento?"
 IFReturnCondition = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 ReplacesIFsWithIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
+UnnecessaryCodeAfterReturn = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
