add distractors to RemoveEmptyIfAndEnd

--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -48,7 +48,7 @@ WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáve
 
 # Code Smell Questions
 UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
-RemoveEmptyIfAndElse = "Os seguintes métodos têm o mesmo comportamento?"
+RemoveEmptyIfAndElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Os seguintes métodos têm o mesmo comportamento?"
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceForWithWhile = "Os seguintes métodos têm o mesmo comportamento?"
