add distractors to UnnecessaryEqualsTrueOrFalse

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -49,7 +49,7 @@ WhichVariablesInScope = The variable %s is undefined in line %s. Which variables
 # Code Smell Questions
 UselessDuplicationIfElse = "Do the following methods have the same behavior?"
 RemoveEmptyIfAndElse = "Which of the following methods has/have the same behavior?"
-UnnecessaryEqualsTrueOrFalse = "Do the following methods have the same behavior?"
+UnnecessaryEqualsTrueOrFalse = "Which of the following methods has/have the same behavior?"
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
 ReplaceForWithWhile = "Do the following methods have the same behavior?"
 ReplaceWhileWithFor = "Do the following methods have the same behavior?"
