add distractors to UnnecessaryIfNesting

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -53,7 +53,7 @@ UnnecessaryEqualsTrueOrFalse = "Which of the following methods has/have the same
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
 ReplaceForWithWhile = "Do the following methods have the same behavior?"
 ReplaceWhileWithFor = "Do the following methods have the same behavior?"
-UnnecessaryIfNesting = "Do the following methods have the same behavior?"
+UnnecessaryIfNesting = "Which of the following methods has/have the same behavior?"
 IFReturnCondition = "Which of the following methods has/have the same behavior?"
 ReplacesIFsWithIfElse = "Which of the following methods has/have the same behavior?"
 UnnecessaryCodeAfterReturn = "Which of the following methods has/have the same behavior?"
