--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -53,7 +53,7 @@ UnnecessaryEqualsTrueOrFalse = "Qual ou quais dos seguintes métodos têm o mesmo 
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceForWithWhile = "Os seguintes métodos têm o mesmo comportamento?"
 ReplaceWhileWithFor = "Os seguintes métodos têm o mesmo comportamento?"
-UnnecessaryIfNesting = "Os seguintes métodos têm o mesmo comportamento?"
+UnnecessaryIfNesting = "Which of the following methods has/have the same behavior?"
 IFReturnCondition = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 ReplacesIFsWithIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UnnecessaryCodeAfterReturn = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
