add distractors to UselessDuplicationIfElse

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -47,7 +47,7 @@ HowManyLoopsMakeSense = How many loops might you need to implement the function 
 WhichVariablesInScope = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
 
 # Code Smell Questions
-UselessDuplicationIfElse = "Do the following methods have the same behavior?"
+UselessDuplicationIfElse = "Which of the following methods has/have the same behavior?"
 RemoveEmptyIfAndElse = "Which of the following methods has/have the same behavior?"
 UnnecessaryEqualsTrueOrFalse = "Which of the following methods has/have the same behavior?"
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
