--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -47,7 +47,7 @@ HowManyLoopsMakeSense = De quantos ciclos poderíamos precisar para implementar a
 WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
 
 # Code Smell Questions
-UselessDuplicationIfElse = "Os seguintes métodos têm o mesmo comportamento?"
+UselessDuplicationIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 RemoveEmptyIfAndElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
