--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -48,6 +48,7 @@ WhichVariablesInScope = The variable %s is undefined in line %s. Which variables
 
 # Code Smell Questions
 UselessDuplicationIfElse = "Which of the following methods has/have the same behavior?"
+UselessDuplicationInsideIfElse = "Which of the following methods has/have the same behavior?"
 RemoveEmptyIfAndElse = "Which of the following methods has/have the same behavior?"
 UnnecessaryEqualsTrueOrFalse = "Which of the following methods has/have the same behavior?"
 UselessVariableDeclaration = "Do the following methods have the same behavior?"
