--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -48,6 +48,7 @@ WhichVariablesInScope = A variável %s não está definida na linha %s. Que variáve
 
 # Code Smell Questions
 UselessDuplicationIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
+UselessDuplicationInsideIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 RemoveEmptyIfAndElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UnnecessaryEqualsTrueOrFalse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UselessVariableDeclaration = "Os seguintes métodos têm o mesmo comportamento?"
