--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -59,6 +59,7 @@ IFReturnCondition = "Which of the following methods has/have the same behavior?"
 ReplacesIFsWithIfElse = "Which of the following methods has/have the same behavior?"
 UnnecessaryCodeAfterReturn = "Which of the following methods has/have the same behavior?"
 LonelyVariable = "Which of the following methods has/have the same behavior?"
+UselessSelfAssign = "Which of the following methods has/have the same behavior?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = The variable %s is undefined in line %s. Which variables can you use at that point in the code?
