--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -59,6 +59,7 @@ IFReturnCondition = "Qual ou quais dos seguintes métodos têm o mesmo comportamen
 ReplacesIFsWithIfElse = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 UnnecessaryCodeAfterReturn = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 LonelyVariable = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
+UselessSelfAssign = "Qual ou quais dos seguintes métodos têm o mesmo comportamento?"
 
 # Compiler Error Questions
 ReferencesUndefinedVariable = A variável %s não está definida na linha %s. Que variáveis poderíamos usar nesse ponto do código?
