new QLC: WhichLastVariableValues

--- a/src/main/resources/localisation/en.properties
+++ b/src/main/resources/localisation/en.properties
@@ -39,6 +39,8 @@ WhichVariableValues = Which is the sequence of values taken by the variable %s w
 WhatIsResult = What is the value returned by the function call %s?
 WhichReturnExecuted = Which return statement (line) executed when calling %s?
 WhatArraySize = Which is the length of the first array allocated when calling %s?
+WhichLastVariableValues = Which are the variable values when the invocation %s terminates?
+WhichLastVariableValuesAnonCall = Which are the variable values when the execution terminates?
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
