--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -39,6 +39,9 @@ WhichVariableValues = Qual a sequência de valores atribuidos à variável %s na in
 WhatIsResult = Qual o valor devolvido ao invocar %s?
 WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar %s?
 WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
+WhichLastVariableValues = Quais são os valores das variáveis após a invocação %s?
+WhichLastVariableValuesAnonCall = Quais são os valores das variáveis no final da execução?
+
 
 # Custom Static Question Types
 CanCallAMethodWithGivenArguments = A função %s pode ser chamada com os argumentos (%s)?
