--- a/src/main/resources/localisation/pt.properties
+++ b/src/main/resources/localisation/pt.properties
@@ -17,7 +17,7 @@ FunctionTakesNoParameters = A função não tem parâmetros.
 Line = Linha
 
 # JASK Static Question Types
-CallsOtherFunctions = A função %s depende de outros funções?
+CallsOtherFunctions = A função %s depende de outras funções?
 HowManyFunctionDependencies = De quantas funções depende a função %s?
 WhichFunctionDependencies = Quais são os funções de que depende a função %s?
 IsRecursive = A função %s é recursiva?
