fix bug exclude correct from distractors

--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -26,10 +26,10 @@ CanCallAMethodWithGivenArguments = A função %s pode ser chamada com os argumento
 HowManyFunctionDependencies = De quantas funções depende a função %s?
 HowManyLoops = Quantos ciclos tem a função %s?
 HowManyParams = Quantos parâmetros tem a função %s?
-HowManyVariables = Quantas variáveis (excluíndo os parâmetros) tem a função %s?
+HowManyVariables = Quantas variáveis (excluíndo os parâmetros) são declaradas na função %s?
 IsRecursive = A função %s é recursiva?
-WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) da função %s?
-WhichFixedVariables = Quais são as variáveis de valor fixo da função %s?
+WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) declaradas na função %s?
+WhichFixedVariables = Quais são as variáveis de valor fixo declaradas da função %s?
 WhichFunctionDependencies = Quais são os funções de que depende a função %s?
 WhichParameters = Quais são os nomes dos parâmetros da função %s?
 WhichParameterTypes = Quais são os tipos dos parâmetros da função %s?
@@ -38,9 +38,9 @@ WhichVariableHoldsReturn = Qual a variável que guarda o resultado da função %s?
 WhichVariableRole = Qual o papel da variável %s na função %s?
 
 HowManyLoopsAnonCall = Quantos ciclos tem o código?
-HowManyVariablesAnonCall = Quantas variáveis tem o código?
-WhatVariablesAnonCall = Quais são os nomes das variáveis do código?
-WhichFixedVariablesAnonCall = Quais são as variáveis de valor fixo do código?
+HowManyVariablesAnonCall = Quantas variáveis são declaradas no código?
+WhatVariablesAnonCall = Quais são os nomes das variáveis declaradas no código?
+WhichFixedVariablesAnonCall = Quais são as variáveis de valor fixo declaradas no código?
 WhichVariableRoleAnonCall = Qual o papel da variável %s?
 
 # ================= #
