WhichReturnExecuted with statements (not lines)

--- a/src/main/resources/localisation/en/questions.properties
+++ b/src/main/resources/localisation/en/questions.properties
@@ -57,7 +57,7 @@ WhatArraySize = Which is the length of the first array allocated when calling %s
 WhatIsResult = What is the value returned by the function call %s?
 WhichLastVariableValues = Which are the variable values when the invocation %s terminates?
 WhichResultMakesSense = Given the following function signature, which result would make the most sense for the function call %s?
-WhichReturnExecuted = Which return statement (line) executed when calling %s?
+WhichReturnExecuted = Which return statement executed when calling %s?
 WhichVariableValues = Which is the sequence of values taken by the variable %s when calling %s?
 
 HowManyArrayAllocationsAnonCall = How many arrays are allocated when executing the code?
