--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -57,7 +57,7 @@ WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
 WhatIsResult = Qual o valor devolvido ao invocar %s?
 WhichLastVariableValues = Quais são os valores das variáveis após a invocação %s?
 WhichResultMakesSense = Dada a seguinte assinatura de uma função, que resultado faria mais sentido para a invocação %s?
-WhichReturnExecuted = Qual a instrução de retorno (linha) que executou ao invocar %s?
+WhichReturnExecuted = Qual a instrução de retorno que executou ao invocar %s?
 WhichVariableValues = Qual a sequência de valores atribuídos à variável %s na invocação %s?
 
 HowManyArrayAllocationsAnonCall = Quantos vetores são alocados ao executar o código?
