Fix WhatArraySize for when NoneOfTheAbove is correct

--- a/src/main/resources/localisation/en/feedback.properties
+++ b/src/main/resources/localisation/en/feedback.properties
@@ -15,7 +15,7 @@ HowManyArrayWrites_DistractorNumAllocated = This is the number of arrays which w
 HowManyArrayWrites_DistractorReads = Almost! This is the number of array reads. Remember: when you have %s, you're writing %s to the array %s's %s-th position.
 HowManyArrayWrites_DistractorLengthAccesses = This is the number of times an array's %s is accessed. These don't write to any array positions!
 HowManyArrayWrites_DistractorLengthOfAllocated = This is the total length of every array allocated!
-HowManyArrayWrites_Correct = Well done! You read an array %s's %s-th position using %s. In this case, the array reads were: %s.
+HowManyArrayWrites_Correct = Well done! Remember: you read an array %s's %s-th position using %s. In this case, the array reads were: %s.
 
 HowManyFunctionCalls_DistractorWrongProcedure = Almost! This is the number of calls to %s, not %s.
 HowManyFunctionCalls_DistractorTotalAllProcedures = This is the number of total calls (to all functions), not just those to %s!
