Finished feedback localisation entries + Portuguese translations

--- a/src/main/resources/localisation/en/feedback.properties
+++ b/src/main/resources/localisation/en/feedback.properties
@@ -1,3 +1,6 @@
+# ================= #
+# Dynamic Questions #
+# ================= #
 HowDeepCallStack_DistractorNumFunctionCalls = This the total number of function calls! Remember: the call stack handles nested function calls.
 HowDeepCallStack_Correct = Well done! The maximum call stack depth is achieved from the sequence of nested function calls: %s.
 
@@ -15,7 +18,7 @@ HowManyArrayWrites_DistractorNumAllocated = This is the number of arrays which w
 HowManyArrayWrites_DistractorReads = Almost! This is the number of array reads. Remember: when you have %s, you're writing %s to the array %s's %s-th position.
 HowManyArrayWrites_DistractorLengthAccesses = This is the number of times an array's %s is accessed. These don't write to any array positions!
 HowManyArrayWrites_DistractorLengthOfAllocated = This is the total length of every array allocated!
-HowManyArrayWrites_Correct = Well done! Remember: you read an array %s's %s-th position using %s. In this case, the array reads were: %s.
+HowManyArrayWrites_Correct = Well done! Remember: you write %s to an array %s's %s-th position using %s. In this case, the array writes were: %s.
 
 HowManyFunctionCalls_DistractorWrongProcedure = Almost! This is the number of calls to %s, not %s.
 HowManyFunctionCalls_DistractorTotalAllProcedures = This is the number of total calls (to all functions), not just those to %s!
@@ -35,3 +38,66 @@ WhichReturnExecuted_DistractorRightProcedureWrongStmt = Close! This statement is
 WhichReturnExecuted_DistractorWrongProcedure = This return statement belongs to the function %s, not %s!
 
 WhichVariableValues_DistractorWrongVariable = Close! These are the values taken by the variable %s, not by %s.
+
+
+# ==================== #
+# Structural Questions #
+# ==================== #
+HowManyLoops_DistractorBranches = This is the number of branch statements (%s) in the function %s, not loops!
+HowManyLoops_DistractorBranchesAnonCall = This is the number of branch statements (%s) in the code, not loops!
+HowManyLoops_DistractorDistinctLoops = Close! This is the number of unique loop types (%s) present in the function %s. How many of each are there in total?
+HowManyLoops_DistractorDistinctLoopsAnonCall = Close! This is the number of unique loop types (%s) present in the code. How many of each are there in total?
+
+HowManyParams_DistractorLocalVars = Close! These are the function's local variables, not its parameters. Remember: the parameters are the values the function receives as input.
+HowManyParams_ZeroCorrect = Well done! Remember: a function's parameters are written in the parenthesis after the function's name. In this case, the function %s has none!
+HowManyParams_Correct = Well done! Remember: a function's parameters are written in  parentheses after the function's name. In this case, the function %s has parameters %s.
+
+HowManyVariables_ZeroCorrect = Well done! Remember, local variables are variables declared within the function. In this case, there are none!
+HowManyVariables_Correct = Well done! Remember, local variables are variables declared within the function %s. In this case, we have: %s.
+HowManyVariables_DistractorParameters = Close! These are the parameters of the function %s, which appear in parentheses after the function's name: %s. These do not count as local variables!
+HowManyVariables_DistractorParametersPlusVars = Close! This number does include all local variables, but also the parameters of the function %s. Parameters do not count as local variables!
+
+IsRecursive_YesCorrect = Well done! The function %s is recursive because it calls itself: %s.
+IsRecursive_NoIncorrect = Remember: a function is called "recursive" if it calls itself.
+IsRecursive_NoCorrect = Well done! The function %s does not call itself, so it is not recursive.
+IsRecursive_YesIncorrect = Remember: a function is called "recursive" if it calls itself.
+
+WhatVariables_DistractorLiterals = Values written directly (without being stored in a variable first) are called "literals", and do not count as variables.
+WhatVariables_DistractorVarsAndLiterals = Close! All the local variables of the function %s are included here, but so are some values which do not count as variables.
+WhatVariables_DistractorAllInScope = Close! All the local variables of the function %s are included here, but so are some variables declared outside of it. Remember: local variables are those declared within the function.
+WhatVariables_DistractorParams = Close! These are the parameters of the function %s. These do not count as local variables! Remember: local variables are those declared within the function.
+WhatVariables_DistractorMethodName = This is the name of the function %s. It's not a variable!
+WhatVariables_DistractorMethodNameAndParams = This is the name of the function %s, along with its parameters. These do not count as local variables! Remember: local variables are those declared within the function.
+WhatVariables_DistractorNameAndAllInScope = This is the name of the function %s, along with all of its local variables, but also some declared outside the function. Remember: local variables are those declared within the function.
+WhatVariables_DistractorNameAndVars = Close! The name of the function does not count as a variable.
+WhatVariables_Correct = Well done! Remember: a variable is declared using, for example, %s, and a function's local variables are those declared inside the function.
+WhatVariables_CorrectAnonCall = Well done! Remember: a variable is declared using, for example, %s. Your code does not declare any variables.
+
+WhichFixedVariables_DistractorParams = These are the parameters of the function %s. These do not count as variables!
+WhichFixedVariables_DistractorLiterals = Values written directly (without being stored in a variable first) are called "literals", and do not count as variables.
+WhichFixedVariables_DistractorNotFixed = These are precisely the variables which are not fixed! Remember: a fixed variable is one whose value is never changed after being declared. Here, for example, the statement %s changes the value of the variable %s, so it is not fixed.
+WhichFixedVariables_DistractorAllLocal = All the fixed-value variables are included here, but so are some which are not fixed! Remember: a fixed variable is one whose value is never changed after being declared. Here, for example, the statement %s changes the value of the variable %s, so it is not fixed.
+WhichFixedVariables_Correct = Well done! The variables %s are initialised, but their value never changes, so they are fixed.
+
+WhichFunctionDependencies_DistractorControlStructures = Statements like %s are called "control structures". They don't count as functions!
+WhichFunctionDependencies_DistractorNamesAndControlStructures = Close! Statements like %s are called "control structures". They don't count as functions!
+WhichFunctionDependencies_DistractorReturnStmts = Return statements (%s) end a function's execution, but they themselves do not count as functions.
+WhichFunctionDependencies_DistractorControlsAndReturns = Statements like %s are called "control structures", and return statements (%s) end a function's execution. Neither count as functions!
+WhichFunctionDependencies_Correct = Well done! Remember: a function depends on the other functions which it calls.
+
+WhichParametersMultipleChoice_DistractorParamTypes = Close! This is a parameter's type. Remember: just like when declaring variables, you write the name after the type.
+WhichParametersMultipleChoice_DistractorLocalVars = This is a variable of the function %s. Remember: a function's parameters are written in parentheses after its name.
+WhichParametersMultipleChoice_DistractorLocalVarTypes = This is the type of a variable of the function %s. Remember: a function's parameters are written in parentheses after its name.
+
+WhichParametersSingleChoice_DistractorParamAndName = Close! But remember: a function's name is not a parameter!
+WhichParametersSingleChoice_DistractorParamTypes = Close! These are the parameters' types. Remember: just like when declaring variables, you write the name after the type.
+WhichParametersSingleChoice_DistractorLocalVars = These are the function %s's variables, not its parameters. Remember: a function's parameters are written in parentheses after its name.
+WhichParametersSingleChoice_DistractorLocalVarTypes = These are the types of the function %s's local variables. Remember: a function's parameters are written in parentheses after its name.
+
+WhichParameterTypes_DistractorParameters = Close! These are the actual parameters of the function %s, not their types. Remember: just like when declaring variables, you write the name after the type.
+WhichParameterTypes_DistractorLocalVars = These are the function %s's variables, not its parameters. Remember: a function's parameters are written in parentheses after its name.
+WhichParameterTypes_DistractorLocalVarTypes = These are the types of the function %s's variables, not of its parameters. Remember: a function's parameters are written in parentheses after its name.
+WhichParameterTypes_DistractorParamTypesAndReturnType = Close! The function %s's return type (%s) does not count as a parameter type.
+
+WhichReturnType_DistractorName = This is the function's name. It always shows up after the function's return type!
+WhichReturnType_Correct = Well done! Remember: a function's return type always shows up right before its name.
