Added unit tests + fixed a bunch of bugs

--- a/src/main/resources/localisation/en/questions.properties
+++ b/src/main/resources/localisation/en/questions.properties
@@ -43,6 +43,8 @@ WhatVariablesAnonCall = Which are the variable names in the code?
 WhichFixedVariablesAnonCall = Which are the fixed value variables of the code?
 WhichVariableRoleAnonCall = What is the role of the variable %s?
 
+HowManyLoops_OptionHoweverManyNeededForGuard = As many as needed for the condition %s to be %s.
+
 # ================= #
 # Dynamic Questions #
 # ================= #
