--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -43,6 +43,8 @@ WhatVariablesAnonCall = Quais são os nomes das variáveis declaradas no código?
 WhichFixedVariablesAnonCall = Quais são as variáveis de valor fixo declaradas no código?
 WhichVariableRoleAnonCall = Qual o papel da variável %s?
 
+HowManyLoops_OptionHoweverManyNeededForGuard = Tantos quanto forem necessários para a condição %s ser %s.
+
 # ================= #
 # Dynamic Questions #
 # ================= #
