--- a/src/main/resources/localisation/en/feedback.properties
+++ b/src/main/resources/localisation/en/feedback.properties
@@ -26,7 +26,7 @@ HowManyFunctionCalls_DistractorTotalAllProcedures = This is the number of total 
 HowManyLoopIterations_DistractorOneMore = Almost! Remember: after the last iteration, the condition %s will still be evaluated (to %s) but the loop body won't be entered, so it does not count as an iteration.
 
 HowManyVariableAssignments_Correct = Well done! Remember, an assignment to a variable %s is a statement like %s.
-HowManyVariableAssignments_DistractorWrongVariable = Almost! This is the number of assignments of the variable %s, not %s.
+HowManyVariableAssignments_DistractorWrongVariable = Almost! This is the number of assignments of %s, not %s.
 
 WhatArraySize_DistractorParameter = Close! This is the length of the argument %s. Arguments do not count as being allocated within the function!
 WhatArraySize_NoneOfTheAboveCorrect = Well done! Trick question: the function does not allocate any arrays!
@@ -47,10 +47,11 @@ HowManyLoops_DistractorBranches = This is the number of branch statements (%s) i
 HowManyLoops_DistractorBranchesAnonCall = This is the number of branch statements (%s) in the code, not loops!
 HowManyLoops_DistractorDistinctLoops = Close! This is the number of unique loop types (%s) present in the function %s. How many of each are there in total?
 HowManyLoops_DistractorDistinctLoopsAnonCall = Close! This is the number of unique loop types (%s) present in the code. How many of each are there in total?
+HowManyLoops_DistractorGuardCondition = This question is asking about how many loops there are in the code, not how many iterations will happen if the code is executed!
 
-HowManyParams_DistractorLocalVars = Close! These are the function's local variables, not its parameters. Remember: the parameters are the values the function receives as input.
+HowManyParams_DistractorLocalVars = Close! This is the number of the function's local variables, not of its parameters. Remember: the parameters are the values the function receives as input.
 HowManyParams_ZeroCorrect = Well done! Remember: a function's parameters are written in the parenthesis after the function's name. In this case, the function %s has none!
-HowManyParams_Correct = Well done! Remember: a function's parameters are written in  parentheses after the function's name. In this case, the function %s has parameters %s.
+HowManyParams_Correct = Well done! Remember: a function's parameters are written in parentheses after the function's name. In this case, the function %s has parameters %s.
 
 HowManyVariables_ZeroCorrect = Well done! Remember, local variables are variables declared within the function. In this case, there are none!
 HowManyVariables_Correct = Well done! Remember, local variables are variables declared within the function %s. In this case, we have: %s.
@@ -64,6 +65,7 @@ IsRecursive_YesIncorrect = Remember: a function is called "recursive" if it call
 
 WhatVariables_DistractorLiterals = Values written directly (without being stored in a variable first) are called "literals", and do not count as variables.
 WhatVariables_DistractorVarsAndLiterals = Close! All the local variables of the function %s are included here, but so are some values which do not count as variables.
+WhatVariables_DistractorVarTypes = These are the types of the variables, not their names!
 WhatVariables_DistractorAllInScope = Close! All the local variables of the function %s are included here, but so are some variables declared outside of it. Remember: local variables are those declared within the function.
 WhatVariables_DistractorParams = Close! These are the parameters of the function %s. These do not count as local variables! Remember: local variables are those declared within the function.
 WhatVariables_DistractorMethodName = This is the name of the function %s. It's not a variable!
@@ -71,7 +73,7 @@ WhatVariables_DistractorMethodNameAndParams = This is the name of the function %
 WhatVariables_DistractorNameAndAllInScope = This is the name of the function %s, along with all of its local variables, but also some declared outside the function. Remember: local variables are those declared within the function.
 WhatVariables_DistractorNameAndVars = Close! The name of the function does not count as a variable.
 WhatVariables_Correct = Well done! Remember: a variable is declared using, for example, %s, and a function's local variables are those declared inside the function.
-WhatVariables_CorrectAnonCall = Well done! Remember: a variable is declared using, for example, %s. Your code does not declare any variables.
+WhatVariables_CorrectAnonCall = Well done! Remember: a variable is declared using, for example, %s.
 
 WhichFixedVariables_DistractorParams = These are the parameters of the function %s. These do not count as variables!
 WhichFixedVariables_DistractorLiterals = Values written directly (without being stored in a variable first) are called "literals", and do not count as variables.
@@ -83,21 +85,26 @@ WhichFunctionDependencies_DistractorControlStructures = Statements like %s are c
 WhichFunctionDependencies_DistractorNamesAndControlStructures = Close! Statements like %s are called "control structures". They don't count as functions!
 WhichFunctionDependencies_DistractorReturnStmts = Return statements (%s) end a function's execution, but they themselves do not count as functions.
 WhichFunctionDependencies_DistractorControlsAndReturns = Statements like %s are called "control structures", and return statements (%s) end a function's execution. Neither count as functions!
+WhichFunctionDependencies_DistractorTypes = Data types are not functions!
+WhichFunctionDependencies_DistractorModifiers = Modifiers (e.g. %s, %s) are not functions!
 WhichFunctionDependencies_Correct = Well done! Remember: a function depends on the other functions which it calls.
 
 WhichParametersMultipleChoice_DistractorParamTypes = Close! This is a parameter's type. Remember: just like when declaring variables, you write the name after the type.
 WhichParametersMultipleChoice_DistractorLocalVars = This is a variable of the function %s. Remember: a function's parameters are written in parentheses after its name.
 WhichParametersMultipleChoice_DistractorLocalVarTypes = This is the type of a variable of the function %s. Remember: a function's parameters are written in parentheses after its name.
+WhichParametersMultipleChoice_NoneCorrect = Well done! A function's parameters are written in parentheses after its name, so this was a trick question: %s doesn't have any!
 
 WhichParametersSingleChoice_DistractorParamAndName = Close! But remember: a function's name is not a parameter!
 WhichParametersSingleChoice_DistractorParamTypes = Close! These are the parameters' types. Remember: just like when declaring variables, you write the name after the type.
 WhichParametersSingleChoice_DistractorLocalVars = These are the function %s's variables, not its parameters. Remember: a function's parameters are written in parentheses after its name.
 WhichParametersSingleChoice_DistractorLocalVarTypes = These are the types of the function %s's local variables. Remember: a function's parameters are written in parentheses after its name.
+WhichParametersSingleChoice_NoneCorrect = Well done! A function's parameters are written in parentheses after its name, so this was a trick question: %s doesn't have any!
 
 WhichParameterTypes_DistractorParameters = Close! These are the actual parameters of the function %s, not their types. Remember: just like when declaring variables, you write the name after the type.
 WhichParameterTypes_DistractorLocalVars = These are the function %s's variables, not its parameters. Remember: a function's parameters are written in parentheses after its name.
 WhichParameterTypes_DistractorLocalVarTypes = These are the types of the function %s's variables, not of its parameters. Remember: a function's parameters are written in parentheses after its name.
 WhichParameterTypes_DistractorParamTypesAndReturnType = Close! The function %s's return type (%s) does not count as a parameter type.
+WhichParameterTypes_NoneCorrect = Well done! A function's parameters are written in parentheses after its name, so this was a trick question: %s doesn't have any!
 
 WhichReturnType_DistractorName = This is the function's name. It always shows up after the function's return type!
 WhichReturnType_Correct = Well done! Remember: a function's return type always shows up right before its name.
