--- a/src/main/resources/localisation/pt/feedback.properties
+++ b/src/main/resources/localisation/pt/feedback.properties
@@ -26,7 +26,7 @@ HowManyFunctionCalls_DistractorTotalAllProcedures = Este é o número total de cha
 HowManyLoopIterations_DistractorOneMore = Quase! Lembra-te: após a última iteração, a condição %s ainda será avaliada (para %s), mas o corpo do ciclo não será executado, por isso não conta como uma iteração.
 
 HowManyVariableAssignments_Correct = Bom trabalho! Lembra-te: uma atribuição a uma variável %s é uma instrução como %s.
-HowManyVariableAssignments_DistractorWrongVariable = Quase! Este é o número de atribuições à variável %s, não a %s.
+HowManyVariableAssignments_DistractorWrongVariable = Quase! Este é o número de atribuições a %s, não a %s.
 
 WhatArraySize_DistractorParameter = Quase! Este é o comprimento do argumento %s. Os argumentos não contam como sendo alocados dentro da função!
 WhatArraySize_NoneOfTheAboveCorrect = Bom trabalho! Pergunta de rasteira: a função não aloca nenhum vetor!
@@ -47,8 +47,9 @@ HowManyLoops_DistractorBranches = Este é o número de instruções de seleção (%s) 
 HowManyLoops_DistractorBranchesAnonCall = Este é o número de instruções de seleção (%s) no código, não de ciclos!
 HowManyLoops_DistractorDistinctLoops = Quase! Este é o número de tipos de ciclos distintos (%s) presentes na função %s. Quantos de cada um existem no total?
 HowManyLoops_DistractorDistinctLoopsAnonCall = Quase! Este é o número de tipos de ciclos distintos (%s) presentes no código. Quantos de cada um existem no total?
+HowManyLoops_DistractorGuardCondition = Esta questão pergunta quantos ciclos estão no código, não quantas iterações aconteceriam se o código fosse executado!
 
-HowManyParams_DistractorLocalVars = Quase! Estas são as variáveis locais da função, não os seus parâmetros. Lembra-te: os parâmetros são os valores que a função recebe como input.
+HowManyParams_DistractorLocalVars = Quase! Este é o número de variáveis locais da função, não dos seus parâmetros. Lembra-te: os parâmetros são os valores que a função recebe como input.
 HowManyParams_ZeroCorrect = Bom trabalho! Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome da função. Neste caso, a função %s não tem nenhum!
 HowManyParams_Correct = Bom trabalho! Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome da função. Neste caso, a função %s tem os parâmetros %s.
 
@@ -64,6 +65,7 @@ IsRecursive_YesIncorrect = Lembra-te: uma função é chamada "recursiva" se se cha
 
 WhatVariables_DistractorLiterals = Valores escritos diretamente (sem serem guardados primeiro numa variável) chamam-se "literais" e não contam como variáveis.
 WhatVariables_DistractorVarsAndLiterals = Quase! Todas as variáveis locais da função %s estão incluídas aqui, mas também alguns valores que não contam como variáveis.
+WhatVariables_DistractorVarTypes = Estes são os tipos das variáveis, não os seus nomes!
 WhatVariables_DistractorAllInScope = Quase! Todas as variáveis locais da função %s estão incluídas aqui, mas também algumas variáveis declaradas fora dela. Lembra-te: variáveis locais são as declaradas dentro da função.
 WhatVariables_DistractorParams = Quase! Estes são os parâmetros da função %s. Estes não contam como variáveis locais! Lembra-te: variáveis locais são as declaradas dentro da função.
 WhatVariables_DistractorMethodName = Este é o nome da função %s. Não é uma variável!
@@ -71,7 +73,7 @@ WhatVariables_DistractorMethodNameAndParams = Este é o nome da função %s, juntam
 WhatVariables_DistractorNameAndAllInScope = Este é o nome da função %s, juntamente com todas as suas variáveis locais, mas também algumas declaradas fora da função. Lembra-te: variáveis locais são as declaradas dentro da função.
 WhatVariables_DistractorNameAndVars = Quase! O nome da função não conta como variável.
 WhatVariables_Correct = Bom trabalho! Lembra-te: uma variável é declarada usando, por exemplo, %s, e as variáveis locais de uma função são as declaradas dentro dela.
-WhatVariables_CorrectAnonCall = Bom trabalho! Lembra-te: uma variável é declarada usando, por exemplo, %s. O teu código não declara nenhuma variável.
+WhatVariables_CorrectAnonCall = Bom trabalho! Lembra-te: uma variável é declarada usando, por exemplo, %s.
 
 WhichFixedVariables_DistractorParams = Estes são os parâmetros da função %s. Estes não contam como variáveis!
 WhichFixedVariables_DistractorLiterals = Valores escritos diretamente (sem serem guardados primeiro numa variável) chamam-se "literais" e não contam como variáveis.
@@ -83,21 +85,26 @@ WhichFunctionDependencies_DistractorControlStructures = Instruções como %s chama
 WhichFunctionDependencies_DistractorNamesAndControlStructures = Quase! Instruções como %s chamam-se "estruturas de controlo". Não contam como funções!
 WhichFunctionDependencies_DistractorReturnStmts = Instruções de retorno (%s) terminam a execução de uma função, mas não contam como funções.
 WhichFunctionDependencies_DistractorControlsAndReturns = Instruções como %s chamam-se "estruturas de controlo", e instruções de retorno (%s) terminam a execução de uma função. Nenhuma conta como função!
+WhichFunctionDependencies_DistractorTypes = Tipos de dados não são funções!
+WhichFunctionDependencies_DistractorModifiers = Modificadores (e.g. %s, %s) não são funções!
 WhichFunctionDependencies_Correct = Bom trabalho! Lembra-te: uma função depende das outras funções que chama.
 
 WhichParametersMultipleChoice_DistractorParamTypes = Quase! Este é o tipo de um parâmetro. Lembra-te: tal como quando declaras variáveis, escreves o nome a seguir ao tipo.
 WhichParametersMultipleChoice_DistractorLocalVars = Esta é uma variável da função %s. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
 WhichParametersMultipleChoice_DistractorLocalVarTypes = Este é o tipo de uma variável da função %s. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
+WhichParametersMultipleChoice_NoneCorrect = Bom trabalho! Os parâmetros de uma função são escritos entre parênteses a seguir ao nome, então esta era rasteira: %s não tem parâmetros!
 
 WhichParametersSingleChoice_DistractorParamAndName = Quase! Mas lembra-te: o nome de uma função não é um parâmetro!
 WhichParametersSingleChoice_DistractorParamTypes = Quase! Estes são os tipos dos parâmetros. Lembra-te: tal como quando declaras variáveis, escreves o nome a seguir ao tipo.
 WhichParametersSingleChoice_DistractorLocalVars = Estas são as variáveis da função %s, não os seus parâmetros. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
 WhichParametersSingleChoice_DistractorLocalVarTypes = Estes são os tipos das variáveis locais da função %s. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
+WhichParametersSingleChoice_NoneCorrect = Bom trabalho! Os parâmetros de uma função são escritos entre parênteses a seguir ao nome, então esta era rasteira: %s não tem parâmetros!
 
 WhichParameterTypes_DistractorParameters = Quase! Estes são os parâmetros reais da função %s, não os seus tipos. Lembra-te: tal como quando declaras variáveis, escreves o nome a seguir ao tipo.
 WhichParameterTypes_DistractorLocalVars = Estas são as variáveis da função %s, não os seus parâmetros. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
 WhichParameterTypes_DistractorLocalVarTypes = Estes são os tipos das variáveis da função %s, não dos seus parâmetros. Lembra-te: os parâmetros de uma função são escritos entre parênteses a seguir ao nome.
 WhichParameterTypes_DistractorParamTypesAndReturnType = Quase! O tipo de retorno da função %s (%s) não conta como tipo de parâmetro.
+WhichParameterTypes_NoneCorrect = Bom trabalho! Os parâmetros de uma função são escritos entre parênteses a seguir ao nome, então esta era rasteira: %s não tem parâmetros!
 
 WhichReturnType_DistractorName = Este é o nome da função. Ele aparece sempre depois do tipo de retorno!
 WhichReturnType_Correct = Bom trabalho! Lembra-te: o tipo de retorno de uma função aparece sempre imediatamente antes do seu nome.
