minor text fixes

--- a/src/main/resources/localisation/en/questions.properties
+++ b/src/main/resources/localisation/en/questions.properties
@@ -24,7 +24,7 @@ Stepper = Stepper
 CallsOtherFunctions = Does the function %s depend on other functions?
 CanCallAMethodWithGivenArguments = Can the function %s be called with the arguments (%s)?
 HowManyFunctionDependencies = How many functions does the function %s depend on?
-WhichFunctionDependencies = Which other functions does the function %s depend on?
+WhichFunctionDependencies = The function %s depends on which functions?
 HowManyLoops = How many loops does function %s have?
 HowManyParams = How many parameters does the function %s have?
 HowManyVariables = How many variables (not including parameters) does the function %s have?
@@ -52,7 +52,7 @@ HowDeepCallStack = What is the maximum call stack depth when calling %s?
 HowManyArrayAllocations = How many arrays are allocated when calling %s?
 HowManyArrayReads = How many array position reads are performed when calling %s?
 HowManyArrayWrites = How many array position writes are performed when calling %s?
-HowManyFunctionCalls = How many calls to %s are performed when calling %s?
+HowManyFunctionCalls = How many calls to the function %s are performed when call %s?
 HowManyLoopIterations = When calling %s, how many iterations does the loop perform?
 HowManyVariableAssignments = How many times is the variable %s assigned when calling %s?
 WhatArraySize = Which is the length of the first array allocated when calling %s?
