--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -30,7 +30,7 @@ HowManyVariables = Quantas variáveis (excluíndo os parâmetros) são declaradas na
 IsRecursive = A função %s é recursiva?
 WhatVariables = Quais são os nomes das variáveis (excluíndo os parâmetros) declaradas na função %s?
 WhichFixedVariables = Quais são as variáveis de valor fixo declaradas da função %s?
-WhichFunctionDependencies = Quais são os funções de que depende a função %s?
+WhichFunctionDependencies =  A função %s depende de que funções?
 WhichParameters = Quais são os nomes dos parâmetros da função %s?
 WhichParameterTypes = Quais são os tipos dos parâmetros da função %s?
 WhichReturnType = Qual o tipo de retorno da função %s?
@@ -52,7 +52,7 @@ HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação 
 HowManyArrayAllocations = Quantos vetores são alocados ao invocar %s?
 HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
 HowManyArrayWrites = Quantas escritas em posições de vetor são realizadas ao invocar %s?
-HowManyFunctionCalls = Quantas invocações a %s são feitas ao invocar %s?
+HowManyFunctionCalls = Quantas chamadas à função %s são feitas ao invocar %s?
 HowManyLoopIterations = Ao invocar %s, quantas iterações são executadas no ciclo?
 HowManyVariableAssignments = Quantas atribuições de valor à variável %s são feitas na invocação %s?
 WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
