minors in PT question text

--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -48,18 +48,18 @@ HowManyLoops_OptionHoweverManyNeededForGuard = Tantos quanto forem necessários p
 # ================= #
 # Dynamic Questions #
 # ================= #
-HowDeepCallStack = Qual a profundidade máxima da pilha de chamadas na invocação %s?
-HowManyArrayAllocations = Quantos vetores são alocados ao invocar %s?
-HowManyArrayReads = Quantas leituras a posições de vetor são feitas ao invocar %s?
-HowManyArrayWrites = Quantas escritas em posições de vetor são realizadas ao invocar %s?
-HowManyFunctionCalls = Quantas chamadas à função %s são feitas ao invocar %s?
+HowDeepCallStack = Ao invocar %s, qual a profundidade máxima da pilha de chamadas?
+HowManyArrayAllocations = Ao invocar %s, quantos vetores são alocados?
+HowManyArrayReads = Ao invocar %s, quantas leituras a posições de vetor são feitas?
+HowManyArrayWrites = Ao invocar %s, quantas escritas em posições de vetor são feitas?
+HowManyFunctionCalls = Ao invocar %s, quantas chamadas à função %s são feitas?
 HowManyLoopIterations = Ao invocar %s, quantas iterações são executadas no ciclo?
 HowManyVariableAssignments = Quantas atribuições de valor à variável %s são feitas na invocação %s?
-WhatArraySize = Qual o comprimento do primeiro vetor alocado ao invocar %s?
-WhatIsResult = Qual o valor devolvido ao invocar %s?
-WhichLastVariableValues = Quais são os valores das variáveis após a invocação %s?
+WhatArraySize = Ao invocar %s, qual o comprimento do primeiro vetor alocado?
+WhatIsResult = Qual o valor devolvido na invocação %s?
+WhichLastVariableValues = Ao invocar %s, quais são os valores finais das variáveis dessa função?
 WhichResultMakesSense = Dada a seguinte assinatura de uma função, que resultado faria mais sentido para a invocação %s?
-WhichReturnExecuted = Qual a instrução de retorno que executou ao invocar %s?
+WhichReturnExecuted =  Ao invocar %s, qual a instrução de retorno que executou?
 WhichVariableValues = Qual a sequência de valores atribuídos à variável %s na invocação %s?
 
 HowManyArrayAllocationsAnonCall = Quantos vetores são alocados ao executar o código?
