minors in PT question text (fix)

--- a/src/main/resources/localisation/pt/questions.properties
+++ b/src/main/resources/localisation/pt/questions.properties
@@ -52,7 +52,7 @@ HowDeepCallStack = Ao invocar %s, qual a profundidade máxima da pilha de chamada
 HowManyArrayAllocations = Ao invocar %s, quantos vetores são alocados?
 HowManyArrayReads = Ao invocar %s, quantas leituras a posições de vetor são feitas?
 HowManyArrayWrites = Ao invocar %s, quantas escritas em posições de vetor são feitas?
-HowManyFunctionCalls = Ao invocar %s, quantas chamadas à função %s são feitas?
+HowManyFunctionCalls = Quantas chamadas à função %s são feitas ao invocar %s?
 HowManyLoopIterations = Ao invocar %s, quantas iterações são executadas no ciclo?
 HowManyVariableAssignments = Quantas atribuições de valor à variável %s são feitas na invocação %s?
 WhatArraySize = Ao invocar %s, qual o comprimento do primeiro vetor alocado?
